--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to Aifuse.">
   <script>
     import("@atomico/site");
   </script>
   <SectionIsotype />
   <main>
-    <h1>Welcome to <span class="text-gradient">Astro</span></h1>
+    <h1>Welcome to <span class="text-gradient">Aifuse</span></h1>
     <p class="instructions">
       Check out the <code>src/pages</code> directory to get started.<br />
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
@@ -43,7 +43,7 @@ import Card from "../components/Card.astro";
 
 <style>
   :root {
-    --astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+    --astro-gradient: linear-gradient(0deg, #d5d5d5, #00ec08);
   }
 
   h1 {
@@ -80,7 +80,7 @@ import Card from "../components/Card.astro";
   .instructions {
     line-height: 1.6;
     margin: 1rem 0;
-    background: #4f39fa;
+    background: #757575;
     padding: 1rem;
     border-radius: 0.4rem;
     color: var(--color-bg);
