--- a/src/components/templates/BaseTemplate.astro
+++ b/src/components/templates/BaseTemplate.astro
@@ -1,24 +1,8 @@
 ---
-import i18next, { t } from "i18next";
-import HeadSEO from "organisms:HeadSEO";
-import { HeadHrefLangs } from "astro-i18next/components";
-import AppFooter from "molecules:AppFooter";
-import Social from "atoms:Social";
-import Email from "atoms:Email";
-import Navbar from "molecules:Navbar";
-import Technologies from "molecules:Technologies";
-import "../../styles/global.css";
-import { domain } from "@store:constants";
-
 let { title, description, image, ogImageAlt } = Astro.props;
-
-title = title || t("seo.title");
-description = description || t("seo.description");
-image = image ? `${domain}${image}` : `${domain}/uploads/me.webp`;
-ogImageAlt = ogImageAlt || t("seo.ogImageAlt");
 ---
 
-<html lang={i18next.language}>
+<html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
