--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,9 @@
 ---
-import { changeLanguage } from "i18next";
 import BaseTemplate from "templates:BaseTemplate";
-import Hero from "organisms:Hero";
-import About from "organisms:About";
-import Jobs from "organisms:jobs/index";
-import Projects from "organisms:Projects";
-import LastArticles from "organisms:LastArticles";
-import Contact from "organisms:Contact";
-
-changeLanguage("en");
 ---
 
 <BaseTemplate>
 	<div class='mx-4'>
-		<Hero />
-		<About />
-		<Jobs />
-		<Projects />
-		<LastArticles />
-		<Contact />
+		<h1>Aifuse</h1>
 	</div>
 </BaseTemplate>
